To Do List is working with a simple textview, can be opened on the phone as well

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".TodoListActivity"
+            android:parentActivityName=".MainActivity"></activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
