--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -37,7 +37,11 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
         <activity android:name=".TodoListActivity"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity"
+            android:launchMode="singleTop"></activity>
+        <activity android:name=".PhotoReceiverActivity"
+            android:parentActivityName=".MainActivity"
+            android:launchMode="singleTop"></activity>
         <activity
             android:name=".MainActivity"
             android:label="Magic">
