--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.wear:wear:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     compileOnly 'com.google.android.wearable:wearable:2.8.0'
     wearApp project(":wear")
     //compile fileTree(dir: 'libs', include: ['*.jar'])
