--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/remote"
-        android:label="Magic"
+        android:label="PhoneBuddy"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
         <service
@@ -21,7 +21,7 @@
 
                 <!--//Specify your path, and a host for the filter. Again, I’m using a wildcard//-->
 
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/my_path" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/command" />
 
             </intent-filter>
         </service>
@@ -44,7 +44,7 @@
             android:launchMode="singleTop"></activity>
         <activity
             android:name=".MainActivity"
-            android:label="Magic">
+            android:label="PhoneBuddy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
